--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "crud-teste",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:crud-teste": "node dist/crud-teste/server/server.mjs"
+    "serve:ssr:crud-teste": "node dist/crud-teste/server/server.mjs",
+    "dev": "nodemon --exec ts-node server.ts",
+    "mongo": "ts-node server.ts",
+    "tsc": "tsc",
+    "dist": "node dist/server.js"
   },
   "private": true,
   "dependencies": {
@@ -44,6 +49,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "nodemon": "^3.1.6",
+    "ts-node": "^10.9.2",
     "typescript": "~5.4.2"
   }
 }
